移动端幻灯片

--- a/2、移动端适配方案-默认样式的清除.html
+++ b/2、移动端适配方案-默认样式的清除.html
@@ -11,7 +11,8 @@
 
             /* 禁止选中字体 */
             /* 但是这个存在兼容性，我们需要在事件章节来解决这个问题 */
-            -webkit-user-select: none;
+            -webkit-user-select: none;  
+            /* 在安卓手机下会没有作用 */
 
             /* 横竖屏切换的时候，禁止放大文字 */
             -webkit-text-size-adjust: none;
